--- a/SGA.Web/Views/_ViewImports.cshtml
+++ b/SGA.Web/Views/_ViewImports.cshtml
@@ -1,3 +1,7 @@
 ﻿@using SGA.Web
 @using SGA.Web.Models
+
+@using SGA.Model.Dtos
+@using SGA.Model.Requests
+
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
