--- a/SGA.Web/Views/Home/Delete.cshtml
+++ b/SGA.Web/Views/Home/Delete.cshtml
@@ -1,31 +1,40 @@
-﻿@using SGA.Model.Dtos
-@model LibroDto
+﻿@model SGA.Model.Dtos.LibroDto
 
 @{
     ViewData["Title"] = "Eliminar libro";
 }
 
-<h1>Eliminar libro</h1>
+<div class="row justify-content-center">
+    <div class="col-lg-7 col-md-9">
+        <div class="card shadow-sm border-danger">
+            <div class="card-header bg-danger text-white">
+                <h5 class="mb-0">¿Seguro que deseas eliminar este libro?</h5>
+            </div>
+            <div class="card-body">
+                <dl class="row mb-4">
+                    <dt class="col-sm-3">Id</dt>
+                    <dd class="col-sm-9">@Model.Id</dd>
 
-<div class="alert alert-warning">
-    ¿Seguro que deseas eliminar este libro?
+                    <dt class="col-sm-3">Título</dt>
+                    <dd class="col-sm-9">@Model.Titulo</dd>
+
+                    <dt class="col-sm-3">AutorId</dt>
+                    <dd class="col-sm-9">@Model.AutorId</dd>
+                </dl>
+
+                <form asp-action="DeleteConfirmed" method="post">
+                    <input type="hidden" asp-for="Id" />
+
+                    <div class="d-flex justify-content-between">
+                        <a asp-action="Index" class="btn btn-outline-secondary">
+                            Cancelar
+                        </a>
+                        <button type="submit" class="btn btn-danger">
+                            Eliminar definitivamente
+                        </button>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
 </div>
-
-<div>
-    <dl class="row">
-        <dt class="col-sm-2">Id</dt>
-        <dd class="col-sm-10">@Model.Id</dd>
-
-        <dt class="col-sm-2">Título</dt>
-        <dd class="col-sm-10">@Model.Titulo</dd>
-
-        <dt class="col-sm-2">AutorId</dt>
-        <dd class="col-sm-10">@Model.AutorId</dd>
-    </dl>
-</div>
-
-<form asp-action="Delete" method="post">
-    <input type="hidden" asp-for="Id" />
-    <button type="submit" class="btn btn-danger">Eliminar</button>
-    <a asp-action="Index" class="btn btn-secondary">Cancelar</a>
-</form>
